Deploy ON netifly

--- a/public/style.css
+++ b/public/style.css
@@ -11,7 +11,7 @@ body {
 }
 #video-grid {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   height: 100%;
   width: 100%;
   align-items: center;
